rbac-best-practices-vpol/restrict-automount-sa-token/e2e/serviceaccount.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: my-service-account
