rbac-best-practices-vpol/restrict-automount-sa-token/restrict-automount-sa-token.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
    name: restrict-automount-sa-token
    annotations:
        policies.kyverno.io/title: Restrict Auto-Mount of Service Account Tokens
        policies.kyverno.io/category: RBAC Best Practices
        policies.kyverno.io/severity: medium
        policies.kyverno.io/subject: Pod,ServiceAccount
        policies.kyverno.io/minversion: 1.6.0
        policies.kyverno.io/description: >
            Kubernetes automatically mounts ServiceAccount credentials in each Pod. The ServiceAccount may be assigned roles allowing Pods to access API resources. Blocking this ability is an extension of the least privilege best practice and should be followed if Pods do not need to speak to the API server to function. This policy ensures that mounting of these ServiceAccount tokens is blocked.

spec:
    validationActions:
        - Deny
    matchConstraints:
        resourceRules:
            - apiGroups: [""]
              apiVersions: ["v1"]
              resources: ["pods"]
              operations: ["CREATE", "UPDATE"]
    matchConditions:
      - name: exclude-policy-reporter
        expression: >-
            !has(object.metadata.labels) || 
            !('app.kubernetes.io/part-of' in object.metadata.labels) || 
            object.metadata.labels['app.kubernetes.io/part-of'] != 'policy-reporter'

    validations:
        - expression: >-
            has(object.spec) && (
            (has(object.spec.serviceAccountName) && object.spec.serviceAccountName != 'default') ||
            (has(object.spec.automountServiceAccountToken) && object.spec.automountServiceAccountToken == false)
            )
          message: "Auto-mounting of Service Account tokens is not allowed unless a custom ServiceAccount is used."
    evaluation:
        background:
            enabled: true
