rbac-best-practices-vpol/restrict-automount-sa-token/e2e/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-automount-sa-token-policy
spec:
  steps:
  - name: test-restrict-automount-sa-token
    try:
    - apply:
        file: ../restrict-automount-sa-token.yaml
    - assert:
        file: policy-assert.yaml
    - apply:
        file: serviceaccount.yaml
    - apply:
        file: good-resource.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-resource.yaml
